# gstreamer-sandbox

./: .gitignore  Dockerfile  README.md  docker-compose.yml
Socket-Client/: socket_client.py
scripts/: udpsink-test.sh
src/: CMakeLists.txt  Dockerfile  installPackages.sh  packages
src/common/: CMakeLists.txt  utils.cpp  utils.h
src/local/: CMakeLists.txt  local.cpp
src/remote/: CMakeLists.txt  remote-udp.cpp  remote.cpp
